--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html>
 <head>
+    <meta charset="utf-8">
     <title>Getting Started</title>
 </head>
 <body>
+<div><p>hello webpack</p></div>
 <script src="dist/bundle.js"></script>
 </body>
 </html>
